--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.Docusaurus_TOKEN }}
+          github_token: ${{ secrets.DOCUSAURUS_TOKEN }}
           publish_dir: ./webpage/build
